# pachinko-allocation-model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
src/pachinko_allocation_model/: pam.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
tests/: test_pam.py
