[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pachinko-allocation-model"
version = "0.2.1"
description = "A probabilistic topic modeling approach inspired by Pachinko Allocation Model"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.14.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "setuptools>=61.0",
    "wheel",
    "twine",
    "build"
]

[project.urls]
Homepage = "https://github.com/dedsec-0010/pachinko-allocation-model"
Documentation = "https://github.com/dedsec-0010/pachinko-allocation-model/blob/main/README.md"
Issues = "https://github.com/dedsec-0010/pachinko-allocation-model/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]